# libviso2_matcher

./: CMakeLists.txt  README.md  package.xml
include/: libviso2_matcher_wrapper.h  matcher_node.h
libviso2_matcher/: CMakeLists.txt  package.xml
libviso2_matcher/cfg/: matcher_parameters.cfg
libviso2_matcher/include/: feature_manager.h  matcher_node.h
libviso2_matcher/libviso2/: matcher.cpp  matcher.h
libviso2_matcher/src/: libviso2_matcher_wrapper.cpp  matcher_node.cpp
libviso2_matcher_msgs/: CMakeLists.txt  package.xml
libviso2_matcher_msgs/msg/: Feature.msg  Feature.msg~  FeatureArray.msg
src/: feature_manager.cpp  matcher_node.cpp
