<?xml version="1.0"?>
<package>
	<name>libviso2_matcher</name>
	<version>0.0.0</version>
	<description>A stand-alone feature matcher derived from libviso2</description>

	<maintainer email="davide.cucci@epfl.ch">Davide A. Cucci</maintainer>

	<license>GPLv3</license>

	<author email="davide.cucci@epfl.ch">Davide A. Cucci</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>opencv2</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>	
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>libviso2_matcher_msgs</build_depend>

	<run_depend>roscpp</run_depend>

</package>
