<?xml version="1.0"?>
<package>
  <name>libviso2_matcher_msgs</name>
  <version>0.0.0</version>
  <description>Messages for the libviso2_matcher package</description>

  <maintainer email="davide.cucci@epfl.ch">Davide A. Cucci</maintainer>

  <license>GPLv3</license>

  <author email="davide.cucci@epfl.ch">Davide A. Cucci</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>  

</package>
